test/expected/declare_ub.out
declare x as unsigned bool
        ^
9: error: "unsigned bool" is illegal for built-in type
